# library

./: README.md  index.html  main.py  pyproject.toml  update
pages/: 2. Configuração [Servidor Debian].html  Converta HTML para PDF com 06 linhas de Código - Programação _ Java - GUJ.html  Usando git-ftp como alternativa de deploy. _ by Diego Guimarães Martins _ Medium.html  Writing bytes to a serial port in C _ ad hocumentation • n. fast documentation of ideas and solutions..html  cheatsheet do git-flow.html  index.html
pages/2. Configuração [Servidor Debian]_files/: GsA0opaeSuQuy-lmi5lGjpCuNVb8V7iM3aRf4cGq52I.js  ads(1).html  ads(2).html  ads(3).html  ads(4).html  ads.html  aframe.html  css.php  f(6).txt  f(7).txt  js.php  override.css  saved_resource(1).html  saved_resource(2).html  saved_resource(3).html  saved_resource(4).html  saved_resource(5).html  saved_resource.html  syntaxhighlighter.js  theme-default.css  zrt_lookup(1).html  zrt_lookup.html
pages/Converta HTML para PDF com 06 linhas de Código - Programação _ Java - GUJ_files/: browser-detect-b59d06ca4adc3540a2f1dfc30fd4aa7cded4ead977ef9a28960311e1e23aff6d.js  browser-update-f2c17f01941035f2f1b3c90ca6344f86051fefff5b484e5d2629d53c2d3d7d01.js  chunk.143.d98985687e41cc4de590-aa42c21874b6a6c798cae0e7a54f213a768160755b0faff2ade4f66c372404d8.js  chunk.729.8a82881f28ded3f0e305-02148c46a36fb5ad72aeda80e5a916ba1a1f10b96d06091407cdc0049ea53602.js  color_definitions_base__10_9223cb97f0bba8e7f91d7a706daaeda07321e53a.css  desktop_232c637053abf791c0f0fc88f0f06451f9af456d.css  fbevents.js  js  overrides  (+28 more)
(+156 files in other folders)
